fix (dataContract): align editor frame

--- a/packages/frontend/src/app/dataContract/create/components/Schema.module.scss
+++ b/packages/frontend/src/app/dataContract/create/components/Schema.module.scss
@@ -8,14 +8,5 @@
         min-height: 200px;
         font-size: 12px;
         line-height: 133%;
-        padding: 10px;
-        background-color: #2E393D;
-        border: 1px solid #404E53;
-
-        &::placeholder {
-            font-size: 14px;
-            line-height: 110%;
-            color: #fff;
-        }
     }
 }
